--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   <title>Todo App</title>
 </head>
 
 <body>
   <div class="aaa">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
+    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
     <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
@@ -29,7 +29,7 @@
       </li>
     </ul>
   </div>
-  <script type="text/javascript" src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
