--- a/index.html
+++ b/index.html
@@ -8,26 +8,100 @@
 </head>
 
 <body>
-  <div class="aaa">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
+  <header class="header">
+    <img class="header__logo" src="./eisenhower-matrix.jpg">
+    <a class="header__more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?&quest;</a>
+  </header>
+  <main class="main">
+    <!-- <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text"><button>Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li><input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
-      <li class="editMode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit">Save</button><button class="delete"><img src="./remove.svg"></button></li>
-    </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
-      </li>
-    </ul>
+    <h3>Todo</h3> -->
+    <section class="todo-list">
+      <form class="todo-list__add-task-form">
+        <label for="new-task" class="add-task-form__label">Add Item</label>
+        <div class="add-task-form__input-group">
+          <input id="new-task" class="add-task-form__input" type="text">
+          <button class="add-task-form__button button">Add</button>
+        </div>
+      </form>
+
+      <!-- <ul id="incompleteTasks">
+        <li>
+          <input type="checkbox">
+          <label class="task">Pay Bills</label>
+          <input type="text" class="task">
+          <button class="edit">Edit</button>
+          <button class="delete"><img src="./remove.svg"></button>
+        </li>
+        <li class="editMode">
+          <input type="checkbox">
+          <label class="task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task">
+          <button class="edit">Save</button>
+          <button class="delete"><img src="./remove.svg"></button>
+        </li>
+      </ul> -->
+
+      <h3 class="todo-list__title">Todo</h3>
+      <ul class="todo-list__tasks-list tasks-list tasks-list--incomplete" id="incompleteTasks">
+        <li class="tasks-list__item task-item">
+          <div class="task-item__checkbox-wrapper">
+            <input class="task-item__checkbox checkbox" type="checkbox">
+            <label class="task-item__label task-label">Pay Bills</label>
+          </div>
+          <div class="task-item__controls-wrapper">
+            <input class="task-item__input edit-input " type="text">
+            <button class="task-item__edit-btn button">Edit</button>
+            <button class="task-item__delete-btn button"><img src="./remove.svg" alt="Delete"></button>
+          </div>
+        </li>
+        <li class="tasks-list__item task-item task-item--edit-mode">
+          <div class="task-item__checkbox-wrapper">
+            <input class="task-item__checkbox checkbox" type="checkbox">
+            <label class="task-item__label  task-label task-item__label--edit">Go Shopping</label>
+          </div>
+          <div class="task-item__controls-wrapper">
+            <input class="task-item__input edit-input task-item__input--edit" type="text" value="Go Shopping">
+            <button class="task-item__save-btn button">Save</button>
+            <button class="task-item__delete-btn button"><img src="./remove.svg" alt="Delete"></button>
+          </div>
+        </li>
+      </ul>
+
+      <!-- <h3>Completed</h3>
+      <ul id="completed-tasks">
+        <li>
+          <input type="checkbox" checked>
+          <label class="task">See the Doctor</label>
+          <input type="text" class="task">
+          <button class="edit">Edit</button>
+          <button class="delete"><img src="./remove.svg"></button>
+        </li>
+      </ul> -->
+
+      <h3 class="todo-list__title">Completed</h3>
+      <ul class="todo-list__tasks-list tasks-list tasks-list--completed" id="completedTasks">
+        <li class="tasks-list__item task-item">
+          <div class="task-item__checkbox-wrapper">
+            <input class="task-item__checkbox checkbox" type="checkbox" checked>
+            <label class="task-item__label task-label task-item__label--completed">See the Doctor</label>
+          </div>
+          <div class="task-item__controls-wrapper">
+            <input class="task-item__input edit-input" type="text">
+            <button class="task-item__edit-btn button">Edit</button>
+            <button class="task-item__delete-btn button"><img src="./remove.svg" alt="Delete"></button>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+
+
+
   </div>
   <script src="app.js"></script>
 </body>
