--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="header">
     <img class="header__logo" src="./eisenhower-matrix.jpg">
-    <a class="header__more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?&quest;</a>
+    <a class="header__more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
   </header>
   <main class="main">
     <!-- <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
