--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
   <header class="header">
-    <img class="header__logo" src="./eisenhower-matrix.jpg">
-    <a class="header__more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
+    <img class="header__logo" src="./eisenhower-matrix.jpg" alt="Logo">
+    <a class="header__more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
     <!-- <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
@@ -55,7 +55,7 @@
           <div class="task-item__controls-wrapper">
             <input class="task-item__input edit-input " type="text">
             <button class="task-item__edit-btn button">Edit</button>
-            <button class="task-item__delete-btn button"><img src="./remove.svg" alt="Delete"></button>
+            <button class="task-item__delete-btn button"><img src="./remove.svg" alt="delete"></button>
           </div>
         </li>
         <li class="tasks-list__item task-item task-item--edit-mode">
@@ -66,7 +66,7 @@
           <div class="task-item__controls-wrapper">
             <input class="task-item__input edit-input task-item__input--edit" type="text" value="Go Shopping">
             <button class="task-item__save-btn button">Save</button>
-            <button class="task-item__delete-btn button"><img src="./remove.svg" alt="Delete"></button>
+            <button class="task-item__delete-btn button"><img src="./remove.svg" alt="delete"></button>
           </div>
         </li>
       </ul>
@@ -92,7 +92,7 @@
           <div class="task-item__controls-wrapper">
             <input class="task-item__input edit-input" type="text">
             <button class="task-item__edit-btn button">Edit</button>
-            <button class="task-item__delete-btn button"><img src="./remove.svg" alt="Delete"></button>
+            <button class="task-item__delete-btn button"><img src="./remove.svg" alt="delete"></button>
           </div>
         </li>
       </ul>
