--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
-<HEAD>
+<head>
   <title>Todo App</title>
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
-</HEAD>
+</head>
 <body>
   <div class="aaa">
     <img src="./eisenhower-matrix.jpg"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
@@ -25,13 +25,13 @@
       <button class="edit">Edit</button>
       <button class="delete"><img src="./remove.svg"></button>
     </li>
-  <li class="editMode">
+    <li class="editMode">
     <input type="checkbox">
     <label class="task">Go Shopping</label>
     <input type="text" value="Go Shopping" class="task">
     <button class='edit'>Save</button>
     <button class="delete"><img src="./remove.svg"></button>
-  </li>
+    </li>
   </ul>
   <h3>Completed</h3>
   <ul id="completed-tasks">
@@ -44,6 +44,6 @@
     </li>
   </ul>
   </div>
-  <script type="text/javascript" SRC="app.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
